Finished rough draft of content

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 	<div id="General">
 		<h2> <center>About Me</center> </h2>
 		<p>Hello! My name is Justin Wei, and I'm a <strong>passionate learner</strong> and <strong>problem-solver</strong>.
-			I currently attend <span style="color: blue"><strong>Duke University</strong></span>, studying <strong>Computer Science and Neuroscience</strong>.
+			I currently attend <span style="color: blue"><strong>Duke University</strong></span> and am studying <strong>Computer Science and Neuroscience</strong>.
 			In my free time I enjoy being outdoors, spending time with friends, and in general <strong>challenging myself</strong>
 			both mentally and physically. I'm extremely interested in <strong>advancing the unexplored frontiers</strong> of software engineering
-			and neuroscience, and perhaps the intersection of the two. You can find out more about what I'm involved in
+			and neuroscience as well as the intersection of the two. You can find out more about what I'm involved in
 			around campus below!
 		</p>
 		<br />
@@ -57,44 +57,58 @@
 		<ol>
 			<li><b>Researcher at Nicolelis Lab</b>- The <a href="http://www.nicolelislab.net/" target="_blank">Nicolelis Lab</a> pioneers research regarding neuronal population coding,
 			Brain Machine Interfaces, and neuroprosthetics. I think the research being done at this lab is fascinating as it lies at the intersection of both neuroscience and computer
-			science, and has both academic and practical implications. I joined the lab in January 2017 and am studying _______________________.</li>
+			science, and has both academic and practical implications. I joined the lab in January 2017 and am currently working in the monkey lab.</li>
 			<li><b>Delta Sigma Pi (DSP)</b>- <a href="https://www.deltasigmapi.org/" target="_blank">DSP</a> is a professional business fraternity that brings together those interested
 			in business, technology, and finance. I recently rushed and pledged the fraternity in the Fall of 2016, and as part of the pledge process, we were required to attend weekly meetings and classes to develop our professional selves.
 			I've been impressed with and loved everyone I've met through DSP, and I've received incredible mentorship from upperclassmen in the fraternity.
 			Because of the amount I've enjoyed being a part of the fraternity, I will serve as my chapter's Marketing Director during the Spring '17 rush period.
 			</li>
-			<li><b>Project Waves Staff</b>- <a href="https://studentaffairs.duke.edu/new-students/preorientation-programs/project-waves">Project Waves (PWaves)</a> is a pre-orientation
-				program for freshmen at Duke. About 80 freshmen have the opportunity to come to Duke a week before orientation to bond with their classmates at the Outer Banks of North Carolina.
-			 	The program is completely student-run, so as member of staff, I help plan this week for the incoming freshmen class in order to make them feel comfortable, bond with each other, and 
-				faciliate their trasntion to college.</li>
-			<li><b>Admissions Ambassador</b>-</li>
+			<li><b>Project Waves Staff &#38; Crew Leader</b>- <a href="https://studentaffairs.duke.edu/new-students/preorientation-programs/project-waves">Project Waves (PWaves)</a> is a pre-orientation
+				program for freshmen at Duke. About 80 freshmen have the opportunity to come to Duke a week before orientation to bond with their classmates at the Marine Lab and Outer Banks of North Carolina.
+			 	The program is completely student-run, so as member of staff, I help plan this week for the incoming freshmen class in order to make them feel comfortable, bond with each other, and
+				faciliate their trasntion to college. As a crew leader throughout the week, I serve as both a first mentor and friend to the incoming students.</li>
+			<li><b>Duke Campus Representative</b>- As a campus representative, I lead weekly tours for prospective students as well as serve as a panelist on info session panels.
+			My role is to represent my university by providing these students with an honest, holistic view of Duke.
+			Though I never thought I'd end up at Duke, after just one semester there's nothing I'd rather be than a Blue Devil, and I want to share my love for the school with
+		 	future Dukies :).</li>
 		</ol>
 		<br />
 	</div>
+	<center><p> Though those are the main activities I'm involved in around campus, I also work on some side projects for fun! Check out some of them below:</p></center>
 
-	<!-- ACTIVITIES -->
+	<!-- Projects -->
 	<hr />
 	<div id="Projects">
 		<h2> Projects </h2>
 		<ol>
-			<li><b>TARA Tracker</b>-</li>
-			<li><b>Auto Scheduler</b>-</li>
-			<li><b>Sonic Sharing</b>-</li>
+			<li><b>TARA Tracker</b> During my post-junior year summer and senior year, I worked at a neuro-radiology lab at UCSF. TARA Tracker is an iOS app that I initially proposed and thought
+				would facilitate the lab’s acquisition of data from their <a href="https://radiology.ucsf.edu/research/labs/BrainChange" target="_blank">BrainChange</a> participants. I ended up developing the app
+				the summer after my senior year, and its implementation, which occurred in November of 2016, is projected to improve the volume and accuracy of data collected, thereby increasing
+				the meaningfulness of the study's results. You can view the source code <a href="https://github.com/jwei98/TARA-Tracker">here</a>!
+			</li>
+			<li><b>Auto Scheduler</b>- This iOS app, which is currently in the making, is a collaboration between myself and two friends. The goal of the app is to help schedule events between
+			large groups of people by accessing their calendars and recommending common available free times. My role in this project is mainly in developing the back-end software, which involves
+			accessing the calendars and manipulating the information (done using arrays) to find common free times.
+		</li>
+			<li><b>Sonic Sharing</b>- Sonic Sharing</a> is a progressive web-app built during PennApps Hackathon XIV (Fall 2016). The app allows computers and devices to transfer information
+				peer-to-peer without any network/bluetooth connection. Instead, this program uses sound emission/receving to share information.
+			</li>
 		</ol>
-		<p>Feel free to check out more of my projects/code at my <a href="https://www.github.com/jwei98" target="_blank">Github</a>!</p>
 		<br />
 	</div>
+	<center><p>Feel free to check out more of my projects/code at my <a href="https://www.github.com/jwei98" target="_blank">Github</a>!</p></center>
 
 	<!-- ADDITIONAL INFORMATION AND LINKS -->
 	<hr />
 	<div id="AdditionalLinks">
-		<h2> Links </h2>
+		<h2> Me in the IOT! </h2>
+		<p> Please reach out if you have any questions or if anything above interests you! </p>
 		<ul>
 			<li> <strong>Email: </strong> <a href="mailto:justin.lj.wei@gmail.com">justin.lj.wei@gmail.com</a></li>
 			<li> <strong>Facebook: </strong> <a href="https://www.facebook.com/justin.wei.127" target="_blank">https://www.facebook.com/justin.wei.127</a></li>
 			<li> <strong>Github: </strong> <a href = "https://www.github.com/jwei98" target="_blank"> https://www.github.com/jwei98 </a></li>
 			<li> <strong>LinkedIn: </strong> <a href = "https://www.linkedin.com/in/justin-wei" target="_blank"> https://www.linkedin.com/in/justin-wei </a></li>
-			<li> <strong>Twitter: </strong> Don't have one</li>
+			<li> Resume available upon request.</li>
 		</ul>
 	</div>
 	<br />
