--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 			<center>
 				What's your name?
 				<input type="text" name="Name" id="Name" placeholder="Enter name"/>
-				<input type="button" onclick="sayHello()" value="Enter" /></center>
+				<input type="button" onclick="typeText()" value="Enter" /></center>
 			<br />
-			<p id="Hello"> </p>
+			<div class="type-wrap">
+            <center><span id="typed" style="white-space:pre;"></span></center>
+        </div>
 			<br />
-			<base href="http://www.justinwei.xyz">
 		</div>
 	</code>
-
 	<!-- GENERAL INFORMATION -->
 	<hr />
 	<div id="General">
@@ -113,3 +113,78 @@
 	</div>
 	<br />
 </body>
+</html>
+
+
+
+
+<!-- Get jQuery -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="typed.js" type="text/javascript"></script>
+    <script>
+    function typeText(){
+		var name = document.getElementById('Name').value;
+		var content = document.getElementById('Hello');
+		console.log(name);
+		if (name == "") {
+			text = "Please enter a name above!";
+		}
+		else {
+			text = "Welcome, " + name + "!";
+		}
+        $("#typed").typed({
+            strings: [text],
+			typeSpeed: 60,
+            backDelay: 500,
+            loop: false,
+            contentType: 'html', // or text
+            // defaults to false for infinite loop
+            loopCount: false,
+            callback: function(){ foo(); },
+            resetCallback: function() { newTyped(); }
+        });
+        $(".reset").click(function(){
+            $("#typed").typed('reset');
+        });
+    }
+    function newTyped(){ /* A new typed object */ }
+    function foo(){ console.log("Callback"); }
+    </script>
+<link href="style.css" rel="stylesheet"/>
+<style>
+	/* code for animated blinking cursor */
+	.typed-cursor{
+		opacity: 1;
+		font-weight: 100;
+		-webkit-animation: blink 0.7s infinite;
+		-moz-animation: blink 0.7s infinite;
+		-ms-animation: blink 0.7s infinite;
+		-o-animation: blink 0.7s infinite;
+		animation: blink 0.7s infinite;
+	}
+	@-keyframes blink{
+		0% { opacity:1; }
+		50% { opacity:0; }
+		100% { opacity:1; }
+	}
+	@-webkit-keyframes blink{
+		0% { opacity:1; }
+		50% { opacity:0; }
+		100% { opacity:1; }
+	}
+	@-moz-keyframes blink{
+		0% { opacity:1; }
+		50% { opacity:0; }
+		100% { opacity:1; }
+	}
+	@-ms-keyframes blink{
+		0% { opacity:1; }
+		50% { opacity:0; }
+		100% { opacity:1; }
+	}
+	@-o-keyframes blink{
+		0% { opacity:1; }
+		50% { opacity:0; }
+		100% { opacity:1; }
+	}
+</style>
